<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDataActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="208dp"
        android:layout_height="63dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="102dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/add_data"
        android:textColor="?attr/colorOnPrimary"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="100dp"
        android:text="@string/weight"
        android:textColor="?attr/colorOnPrimary"
        android:layout_gravity="center"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimalWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />

    <TextView
        android:id="@+id/textViewMuscle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="64dp"
        android:text="@string/muscle_rate"
        android:textColor="?attr/colorOnPrimary"
        android:layout_gravity="center"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimalWeight" />

    <EditText
        android:id="@+id/editTextNumberDecimalMuscle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMuscle" />

    <TextView
        android:id="@+id/textViewFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="64dp"
        android:text="@string/fat_rate"
        android:layout_gravity="center"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimalMuscle" />

    <EditText
        android:id="@+id/editTextNumberDecimalFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFat" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="136dp"
        android:text="@string/kilogram"
        android:layout_gravity="center"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimalWeight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="101dp"
        android:text="@string/percentage"
        android:layout_gravity="center"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimalMuscle"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="101dp"
        android:text="@string/percentage"
        android:layout_gravity="center"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimalFat"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/shape_rounded_corners_10dp"
        android:gravity="center"
        android:onClick="saveData"
        android:text="@string/save"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>